2000-07-31  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc: add ] to list of wildcards.
	* FtpGlob.cc: fix coredump on empty directories.
	* complete.cc: fix filename quotation.

2000-07-30  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: res_prefix new member.
	* FindJob.cc, Fish.cc, Fish.h, FtpDirList.cc, LocalAccess.cc,
	  Resolver.cc: use new IOBuffer.
	* Http.cc, Http.h: implement https; use IOBuffer.
	* HttpDir.cc: skip comments in html; use IOBuffer.
	* buffer.cc, buffer.h: IOBuffer class; IOBufferSSL for ssl IO.
	* resource.cc: add https:proxy setting.

2000-07-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* complete.cc: fix # quoting.

2000-07-28  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc, FileCopy.h: don't create file in reget until data are
	  available.
	* buffer.cc, buffer.h: get_size new method; getsize_and_seek_end removed.

2000-07-27  Alexander V. Lukyanov  <lav@yars.free.net>

	* ResMgr.cc, ResMgr.h: NoClosure validator.
	* CmdExec.cc, FileCopy.cc, GetJob.cc, Resolver.cc, Speedometer.cc,
	  resource.cc: use NoClosure where needed.
	* commands.cc: add closure for cmd:default-protocol and
	  bmk:save-passwords.
	* resource.cc: add http:post-content-type; validate http:put-method.
	* Http.cc: use http:post-content-type.
	* FileSet.cc: (FileSet::Merge) fix long standing bug, which caused
	  rare coredumps on completion.

2000-07-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: apply non-absolute redirection to orig_url.
	* ResMgr.cc, ResMgr.h: regexp validator.
	* ftpclass.cc, resource.cc: ftp:auto-sync-mode setting.

2000-07-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: count errors; (ExitCode) implemented.
	* Resolver.cc: use getipnodebyname when available (for solaris8).
	* ftpclass.cc: handle "" in PWD reply; fix NextPeer selection.
	* NetAccess.cc: don't reset peer_curr on Resolve.
	* pgetJob.cc: fix eta.
